# Nomia

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  Tasks.json  board.html  pyproject.toml  requirements.txt
docs/: README.md
examples/: README.md
nomia/: __init__.py  classify.py  cli.py  config.py  errors.py  extract.py  logging_setup.py  naming.py  ocr.py  organizer.py  paths.py  pipeline.py  report.py  scanner.py  server.py  text_quality.py
tests/: benchmark.py  benchmark_results.json  generate_sample_files.py  test_benchmark.py  test_classify.py  test_extract.py  test_naming.py  test_ocr.py  test_organizer.py  test_pipeline.py  test_report.py  test_scanner.py  test_server.py  test_text_quality.py
tests/real_sample_files/: benchmark_results.json  benchmark_results_full.json  labels.json
tests/real_sample_files/_edge_cases/: random_notes.txt
tests/sample_files/: labels.json  multipage_fax.tiff  receipt_heic_sample.heic
web/: api.js  app.js  index.html  keyboard.js  render.js  state.js  style.css
