[project]
name = "nomia"
version = "0.1.0"
description = "A local-first, AI-powered file organizer. Classifies images and PDFs with a local Ollama vision model, files them into an editable folder structure, and logs every decision to Excel. Fully offline."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Abhilash B" }]
keywords = ["file-organizer", "ollama", "local-ai", "offline", "vision-model"]

dependencies = [
    "ollama>=0.4.0",
    "pymupdf>=1.24.0",
    "pillow>=10.3.0",
    "pillow-heif>=0.18.0",
    "openpyxl>=3.1.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "platformdirs>=4.2.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
geocode = ["reverse_geocoder>=1.5.0"]
macos = ["ocrmac>=1.0.0; sys_platform == 'darwin'"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.14.0",
]

[project.scripts]
nomia = "nomia.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nomia"]

[tool.pytest.ini_options]
testpaths = ["tests"]
